<resources>
    <string name="app_name">Ewic - Sellers</string>
    <string name="connect_local">Connect to local server</string>
    <string name="connect_remote">Connect to remote server</string>
    <string name="retry">Retry</string>
    <string name="error_connect_server">Could not connect to server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="access">Log in</string>
    <string name="endpoint">Endpoint</string>
    <string name="back">Back</string>
    <string name="connecting_server">Connecting to the server</string>
    <string name="please_wait">Please wait</string>
    <string name="error_server">An error has occurred, please retry the operation</string>
    <string name="error_empty_field">Field can\'t be empty</string>
    <string name="error_username_login">Username and/or password incorrect</string>
    <string name="welcome">Welcome</string>
    <string name="startCapacityShop">Click on a store to show it options</string>
    <string name="close_shop">Close shop</string>
    <string name="warning">Warning</string>
    <string name="pre_close_shop">Are you sure you want to close the shop? All active entries will be terminated.</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="capacity">Capacity</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="shop_connect_message">In order to enter the store it is necessary to connect via bluetooth to the device:</string>
    <string name="activate">Activate</string>
    <string name="bluetooth_needed_message">For customers to enter the shop it is necessary to have Bluetooth activated</string>
    <string name="bluetooth_discoverable_message">Is necessary to make the device visible for clients to connect</string>
    <string name="registering_entry">Registering entry</string>
    <string name="new_entry">New Entry</string>
    <string name="bluetooth_disconnected">Bluetooth has been disconnected. A capacity control cannot be carried out without having it activated.</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="lastname">Last name</string>
    <string name="firstName">First name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_password_not_equals">Passwords do not match</string>
    <string name="email_invalid_format">Invalid email format</string>
    <string name="error_username_duplicate">Username already exists. Choose another please.</string>
    <string name="toolbar_menu_my_data">My Data</string>
    <string name="update_my_data">Update my data</string>
    <string name="delete_account">Delete account</string>
    <string name="updating_data">Updateing data</string>
    <string name="update_data_successfully">The data has been updated successfully</string>
    <string name="pre_delete_message">Are you sure you want to delete your account? The data associated with it cannot be recovered.</string>
    <string name="delete">Delete</string>
    <string name="delete_password_needed">To delete the account it is necessary to enter the password.</string>
    <string name="error_password">Password incorrect</string>
    <string name="account_delete_successfully">Account delete successfully</string>
    <string name="actual_password">Actual password</string>
    <string name="new_password">New password</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="create_shop">Crete shop</string>
    <string name="name">Name</string>
    <string name="shop_type">Shop type</string>
    <string name="shop_general_information">General information</string>
    <string name="location">Location</string>
    <string name="coordinates">Coordinates</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="capacity_control">Capacity control</string>
    <string name="max_capacity">Maximum capacity</string>
    <string name="opening_hours">Opening hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="opening">Opening</string>
    <string name="closing">Closing</string>
    <string name="mondayShort">M</string>
    <string name="tuesdayShort">T</string>
    <string name="wednesdayShort">W</string>
    <string name="thursdayShort">Th</string>
    <string name="fridayShort">F</string>
    <string name="saturdayShort">Sa</string>
    <string name="sundayShort">Su</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="error_invalid_latitude">Invalid latitude value. Valid values between -90 and 90.</string>
    <string name="error_invalid_longitude">Invalid longitude_value. Valid values between -180 and 180</string>
    <string name="error_max_capacity_below_1">The maximum capacity cannot be less than 1.</string>
    <string name="error_timetable">Timetable not valid</string>
    <string name="error_time_format">Invalid time format. Use HH:mm</string>
    <string name="error_shop_duplicate">A store with that name, type and location already exists.</string>
    <string name="shop">Shop</string>
    <string name="configuration">Configuration</string>
    <string name="bookings">Bookings</string>
    <string name="update_shop">Update shop</string>
    <string name="reservation_management">Reservation management</string>
    <string name="add_reservation">Add reservation</string>
    <string name="reservations_not_found">There are no upcoming reservations. To create a reservation click on the button.</string>
    <string name="client">client</string>
    <string name="clients">clients</string>
    <string name="ACTIVE">Active</string>
    <string name="WAITING">Waiting</string>
    <string name="COMPLETED">Completed</string>
    <string name="NOT_APPEAR">Not appear</string>
    <string name="CANCELLED">Cancelled</string>
    <string name="client_name">Client name</string>
    <string name="date">Date</string>
    <string name="hour">Hour</string>
    <string name="remarks">Remarks</string>
    <string name="nClients">Number of clients</string>
    <string name="update_reservation">Update reservation</string>
    <string name="error_shop_closed_weekDay">On the chosen day the store is closed. The date has not changed</string>
    <string name="error_client_not_found">Client not found</string>
    <string name="error_hour_invalid">Invalid hour. Please choose one of the list</string>
    <string name="error_bad_format_hour">The hour must follow the formar HH:mm</string>
    <string name="error_bad_format_date">The date must follow the format dd/MM/yyyy</string>
    <string name="error_past_reservation">Can\'t create reservations in the past</string>
    <string name="error_nClients_min">The minimum number of clients is 1.</string>
    <string name="error_nClients_max">The number of customers exceeds the maximum capacity of the store</string>
    <string name="error_rsv_duplicate">The client already has a reservation for that time. Please choose another date</string>
    <string name="error_reservation_shop_full">The reservation cannot be saved for the number of clients on the indicated date.</string>
    <string name="reservation_create_successfully">Reservation created successfully</string>
    <string name="reservation_update_successfully">Reservation updated successfully</string>
    <string name="accept">Accept</string>
    <string name="pre_cancel_reservation_message">Are you sure you want to cancel this reservation? The change cannot be redone</string>
    <string name="settings">Settings</string>
    <string name="email_notifications">Email notifications</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="update_email_params">Update mail parameters</string>
    <string name="parameters_updated_successfully">Parameters updated successfully</string>
    <string name="reservationWaitMinutes_hint">Reservation waiting minutes</string>
    <string name="reservationWaitMinutes_helper">Minutes it takes for a reservation to be marked as does not appear from the time of the reservation. By default 10.</string>
    <string name="minutesBetweenReservations_hint">Minutes between reservations</string>
    <string name="minutesBetweenReservations_helper">Minute interval between available reservations. By default 15.</string>
    <string name="update_reservation_params">Update reservation params</string>
    <string name="error_min_value_1">The minimum value is 1</string>
    <string name="minutesAfterOpeningMorning_hint">Morning opening minutes</string>
    <string name="minutesAfterOpeningMorning_helper">Margin minutes from the morning opening</string>
    <string name="minutesBeforeClosingMorning_hint">Morning closing minutes</string>
    <string name="minutesBeforeClosingMorning_helper">Margin minutes from the morning closing</string>
    <string name="minutesAfterOpeningAfternoon_hint">Afternoon opening minutes</string>
    <string name="minutesAfterOpeningAfternoon_helper">Margin minutes from the afternoon opening</string>
    <string name="minutesBeforeClosingAfternoon_hint">Afternoon closing minutes</string>
    <string name="minutesBeforeClosingAfternoon_helper">Margin minutes from the afternoon closing</string>
    <string name="manual_entry">Manual entry</string>
    <string name="manual_exit">Manual exit</string>
    <string name="automatic_entry_not_activate_1">Automatic process not activated. Only manual entries allowed.</string>
    <string name="automatic_entry_not_activate_2">To activate the automatic process, click here.</string>
    <string name="choose_entry_exit">Choose a entry  to check out</string>
    <string name="exit_register_successfully">Exit register successfully</string>
    <string name="manual_entry_identifier">Entry identifier</string>
    <string name="manual_entry_identifier_helper">Entry identifier to later record its exit manually</string>
    <string name="register_manual_entry">Register manual entry</string>
    <string name="max_capacity_exceeded_message">You cannot enter. Maximum capacity exceeded</string>
    <string name="registering_exit">Registering exit</string>
    <string name="delete_shop">Delete shop</string>
    <string name="pre_delete_shop_message">You are sure you want to delete the store. The information related to your reservations and entries will be deleted and cannot be recovered.</string>
    <string name="delete_password_needed_shop">To delete the shop is necessary to enter the password</string>
    <string name="delete_shop_error">The store could not be deleted.</string>
    <string name="shop_delete_successfully">Shop deleted successfully</string>
    <string name="log_out">Log out</string>
    <string name="shops_not_found">You don\'t have any stores yet. Create your first store by pressing the add button.</string>
    <string name="entry_log">Entry log</string>
    <string name="entries_not_found">No entries found. Please choose another date.</string>
    <string name="entry_avg_duration">Average duration</string>
    <string name="nEntries">Number of entries</string>
    <string name="less_1_minute">Less than a minute</string>
    <string name="entries_chart_title">Number of entries per hour</string>
    <string name="entries_chart_y">Number of entries</string>
    <string name="entries_chart_x">Hour</string>
    <string name="reservation_log">Reservation log</string>
</resources>